--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"@testing-library/user-event": "^7.2.1",
 		"moment": "^2.27.0",
 		"react": "^16.13.1",
+		"react-confirm-alert": "^2.6.1",
 		"react-dom": "^16.13.1",
 		"react-icons": "^3.10.0",
 		"react-moment": "^0.9.7",
