--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react-moment": "^0.9.7",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.3",
+		"react-transition-group": "^4.4.1",
 		"whatwg-fetch": "^3.4.0"
 	},
 	"scripts": {
