--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"@testing-library/user-event": "^7.2.1",
 		"lodash": "^4.17.20",
 		"moment": "^2.27.0",
+		"moment-timezone": "^0.5.31",
 		"path-to-regexp": "^6.1.0",
 		"react": "^16.13.1",
 		"react-confirm-alert": "^2.6.1",
