--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"react": "^16.13.1",
 		"react-confirm-alert": "^2.6.1",
 		"react-dom": "^16.13.1",
+		"react-helmet": "^6.1.0",
 		"react-icons": "^3.10.0",
 		"react-lodash": "^0.1.2",
 		"react-moment": "^0.9.7",
