--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "ttsite",
-	"version": "0.1.0",
+	"version": "1.1.0",
+	"author": "Tino Muzambi",
 	"private": true,
 	"dependencies": {
 		"@testing-library/jest-dom": "^4.2.4",
