--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"react": "^16.13.1",
 		"react-confirm-alert": "^2.6.1",
 		"react-dom": "^16.13.1",
+		"react-flip-move": "^3.0.4",
 		"react-helmet": "^6.1.0",
 		"react-icons": "^3.10.0",
 		"react-lodash": "^0.1.2",
