--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
+		"framer-motion": "^2.7.7",
 		"lodash": "^4.17.20",
 		"moment": "^2.27.0",
 		"moment-timezone": "^0.5.31",
@@ -15,7 +16,6 @@
 		"react": "^16.13.1",
 		"react-confirm-alert": "^2.6.1",
 		"react-dom": "^16.13.1",
-		"react-flip-move": "^3.0.4",
 		"react-helmet": "^6.1.0",
 		"react-icons": "^3.10.0",
 		"react-lodash": "^0.1.2",
