--- a/package.json
+++ b/package.json
@@ -9,16 +9,15 @@
 		"moment": "^2.27.0",
 		"moment-timezone": "^0.5.31",
 		"pusher-js": "^7.0.0",
-		"react": "^16.13.1",
+		"react": "latest",
 		"react-confirm-alert": "^2.6.1",
-		"react-dom": "^16.13.1",
+		"react-dom": "latest",
 		"react-helmet": "^6.1.0",
 		"react-icons": "^3.10.0",
 		"react-lodash": "^0.1.2",
 		"react-moment": "^0.9.7",
 		"react-router-dom": "^5.2.0",
-		"react-scripts": "3.4.3",
-		"whatwg-fetch": "^3.4.0"
+		"react-scripts": "3.4.3"
 	},
 	"scripts": {
 		"start": "react-scripts start",
